# advent-of-ocaml

./: .gitignore  .ocamlformat  .tool-versions  LICENSE  Makefile  advent-of-ocaml.opam  dune-project  index.html  package.json  pnpm-lock.yaml  vite.config.mjs
.github/workflows/: pages.yaml
lib/solver/: dune  registry.ml  registry.mli  solver.ml  solver.mli
lib/year_2015/: day_01.ml  day_01.mli  day_02.ml  day_03.ml  day_04.ml  day_05.ml  dune  year_2015.ml  year_2015.mli
lib/year_2024/: day_01.ml  day_02.ml  day_03.ml  day_04.ml  day_05.ml  day_06.ml  day_07.ml  day_08.ml  day_09.ml  dune  year_2024.ml  year_2024.mli
test/lib/solver/: dune  test_solver.ml
test/tools/geometry/: dune  test_geometry.ml
test/tools/knife/: dune  test_knife.ml
test/tools/parse/: dune  test_parse.ml
test/tools/point_2d/: dune  test_point_2d.ml
test/tools/point_3d/: dune  test_point_3d.ml
tools/coordinate/: coordinate.ml  dune
tools/geometry/: dune  geometry.ml  geometry.mli  point.ml  point_2d.ml  point_2d.mli  point_3d.ml  point_3d.mli
tools/knife/: dune  knife.ml  list.ml  list.mli  seq.ml  seq.mli  string.ml  string.mli  utils.ml  utils.mli
tools/parse/: dune  parse.ml  parse.mli
tools/parser/: dune  parser.ml
tools/point_2d/: dune  point_2d.ml  point_2d.mli
tools/point_3d/: dune  point_3d.ml  point_3d.mli
tools/reader/: dune  file_reader.ml  reader.ml  reader.mli  string_reader.ml
web/: application.module.css  application.re  dune  form.module.css  form.re  main.css  main.re  results.module.css  results.re  selector.module.css  selector.re
(+2 files in other folders)
